--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   
   <groupId>com.panforge</groupId>
   <artifactId>robots</artifactId>
-  <version>1.3.1</version>
+  <version>1.4.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <name>Robots.txt</name>
